# ai_financial_researcher

./: README.md  pyproject.toml
output/: report.md
src/ai_financial_researcher/: crew.py  main.py
