[project]
name = "ai_financial_researcher"
version = "0.1.0"
description = "ai_financial_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "pydantic"
]

[project.scripts]
ai_financial_researcher = "ai_financial_researcher.main:run"
run_crew = "ai_financial_researcher.main:run"
train = "ai_financial_researcher.main:train"
replay = "ai_financial_researcher.main:replay"
test = "ai_financial_researcher.main:test"
run_with_trigger = "ai_financial_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
